tests/rosetta/transpiler/Kotlin/align-columns.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:218: error: keyword cannot be used as a reference
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:299: error: keyword cannot be used as a reference
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:313: error: keyword cannot be used as a reference
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:31: error: unresolved reference: a
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:33: error: variable 'text' must be initialized
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:38: error: unresolved reference: file
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:43: error: unresolved reference: of
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:46: error: unresolved reference: many
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:51: error: unresolved reference: lines
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:58: error: unresolved reference: where
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:64: error: unresolved reference: fields
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:71: error: unresolved reference: within
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                      ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:78: error: unresolved reference: a
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:80: error: unresolved reference: line
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:95: error: unresolved reference: delineated
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:106: error: unresolved reference: by
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:109: error: unresolved reference: a
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                            ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:111: error: unresolved reference: single
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:127: error: unresolved reference: character
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:138: error: unresolved reference: write
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:144: error: unresolved reference: a
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:146: error: unresolved reference: program
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                 ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:166: error: unresolved reference: aligns
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:173: error: unresolved reference: each
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                            ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:178: error: unresolved reference: column
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                 ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:185: error: unresolved reference: of
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:188: error: unresolved reference: fields
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:195: error: unresolved reference: by
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:198: error: unresolved reference: ensuring
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:207: error: unresolved reference: that
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:212: error: unresolved reference: words
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                   ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:221: error: unresolved reference: each
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                            ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:240: error: unresolved reference: are
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:244: error: unresolved reference: separated
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                   ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:254: error: unresolved reference: by
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:257: error: unresolved reference: at
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:260: error: unresolved reference: least
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                   ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:266: error: unresolved reference: one
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:270: error: unresolved reference: space
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:293: error: unresolved reference: allow
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:303: error: unresolved reference: each
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:308: error: unresolved reference: word
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                   ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:316: error: unresolved reference: a
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:318: error: unresolved reference: column
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:325: error: unresolved reference: to
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:328: error: unresolved reference: be
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                       ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:331: error: unresolved reference: either
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:338: error: unresolved reference: left
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                 ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:361: error: unresolved reference: right
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:367: error: unresolved reference: justified
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:378: error: unresolved reference: or
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:381: error: unresolved reference: center
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                                            ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:388: error: unresolved reference: justified
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                                                   ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:398: error: unresolved reference: within
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:405: error: unresolved reference: its
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                                                                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:3:409: error: unresolved reference: column
val text: String = (((("Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n") + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n") + "column$are$separated$by$at$least$one$space.\n") + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n") + "justified,$right$justified,$or$center$justified$within$its$column."
                                                                                                                                                                                                                                                                                                                                                                                                                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:42:28: error: type mismatch: inferred type is Int but BigInteger was expected
    val diff: BigInteger = width - word.length
                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:91:26: error: unresolved reference: size
        while (j < words.size) {
                         ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:92:32: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
            line = (line + pad(words[j] as String, width[j], align)) + " "
                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/align-columns.kt:92:37: error: no get method providing array access
            line = (line + pad(words[j] as String, width[j], align)) + " "
                                    ^
